Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextNumberField.quorum
class Main
    text txt = ""
    action Main
        txt = cast(text, 7.5)
        if txt = "7.5"
            output "passed"
        end
    end
end