Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumberField.quorum
class main
    Boolean bool
    action Main
        bool = cast(Boolean, 7.5)
    end
end